--- a/index.html
+++ b/index.html
@@ -93,16 +93,22 @@
             <img
               src="./images/box-1.jpg"
               alt="Мужчина набирает текст на компьютере"
+              height="294"
             />
           </li>
           <li>
             <img
               src="./images/box-2.jpg"
-              alt="Мобильный телефон в руках у девушки "
+              alt="Мобильный телефон в руках у девушки"
+              height="294"
             />
           </li>
           <li>
-            <img src="./images/box-3.jpg" alt="Планшет со стилусом в руках" />
+            <img
+              src="./images/box-3.jpg"
+              alt="Планшет со стилусом в руках"
+              height="294"
+            />
           </li>
         </ul>
       </section>
@@ -110,23 +116,39 @@
       <section class="team-section">
         <h2 class="team-header">Наша команда</h2>
         <ul>
-          <li>
-            <img src="./images/igor-demjanenko.jpg" alt="Игорь Демьяненко" />
+          <li class="team-item">
+            <img
+              src="./images/igor-demjanenko.jpg"
+              alt="Игорь Демьяненко"
+              width="270"
+            />
             <h3 class="team-names">Игорь Демьяненко</h3>
             <p class="team-positions">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/olga-repina.jpg" alt="Ольга Репина" />
+          <li class="team-item">
+            <img
+              src="./images/olga-repina.jpg"
+              alt="Ольга Репина"
+              width="270"
+            />
             <h3 class="team-names">Ольга Репина</h3>
             <p class="team-positions">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/nikolay-tarasov.jpg" alt="Николай Тарасов" />
+          <li class="team-item">
+            <img
+              src="./images/nikolay-tarasov.jpg"
+              alt="Николай Тарасов"
+              width="270"
+            />
             <h3 class="team-names">Николай Тарасов</h3>
             <p class="team-positions">Marketing</p>
           </li>
-          <li>
-            <img src="./images/mikhail-ermakov.jpg" alt="Михаил Ермаков" />
+          <li class="team-item">
+            <img
+              src="./images/mikhail-ermakov.jpg"
+              alt="Михаил Ермаков"
+              width="270"
+            />
             <h3 class="team-names">Михаил Ермаков</h3>
             <p class="team-positions">UI Designer</p>
           </li>
