--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,7 @@
             <img
               src="./images/technokrjak.jpg"
               alt="Ноутбук с открытим сайтом Технокряк"
+              height="294"
             />
             <h2 class="card-name">Технокряк</h2>
             <p class="card-info">Веб-сайт</p>
@@ -72,6 +73,7 @@
             <img
               src="./images/poster-new-orlean.jpg"
               alt="Два баскетболиста борятся за мяч"
+              height="294"
             />
             <h2 class="card-name">Постер New Orlean vs Golden Star</h2>
             <p class="card-info">Дизайн</p>
@@ -80,12 +82,13 @@
             <img
               src="./images/seafood-restaurant.jpg"
               alt="Логотип ресторана Seafood"
+              height="294"
             />
             <h2 class="card-name">Ресторан Seafood</h2>
             <p class="card-info">Приложение</p>
           </li>
           <li>
-            <img src="./images/project-prime.jpg" alt="Наушники" />
+            <img src="./images/project-prime.jpg" alt="Наушники" height="294" />
             <h2 class="card-name">Проект Prime</h2>
             <p class="card-info">Маркетинг</p>
           </li>
@@ -93,6 +96,7 @@
             <img
               src="./images/project-boxes.jpg"
               alt="Две коробки на белом фоне"
+              height="294"
             />
             <h2 class="card-name">Проект Boxes</h2>
             <p class="card-info">Приложение</p>
@@ -101,12 +105,17 @@
             <img
               src="./images/inspirations-no-borders.jpg"
               alt="Монитор с открытым сайтом Inspiration has no Borders"
+              height="294"
             />
             <h2 class="card-name">Inspiration has no Borders</h2>
             <p class="card-info">Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/limited-editions.jpg" alt="Открытый журнал" />
+            <img
+              src="./images/limited-editions.jpg"
+              alt="Открытый журнал"
+              height="294"
+            />
             <h2 class="card-name">Издание Limited Edition</h2>
             <p class="card-info">Дизайн</p>
           </li>
@@ -114,6 +123,7 @@
             <img
               src="./images/project-lab.jpg"
               alt="Этикетка с логотипом LAB"
+              height="294"
             />
             <h2 class="card-name">Проект LAB</h2>
             <p class="card-info">Маркетинг</p>
@@ -122,6 +132,7 @@
             <img
               src="./images/grouning-business.jpg"
               alt="Ноутбук с открытым сайтом компании Growing Business"
+              height="294"
             />
             <h2 class="card-name">Growing Business</h2>
             <p class="card-info">Приложение</p>
