--- a/portfolio.html
+++ b/portfolio.html
@@ -66,8 +66,8 @@
               alt="Ноутбук с открытим сайтом Технокряк"
               height="294"
             />
-            <h2 class="card-name">Технокряк</h2>
-            <p class="card-info">Веб-сайт</p>
+            <h2 class="card-title">Технокряк</h2>
+            <p class="card-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -75,8 +75,8 @@
               alt="Два баскетболиста борятся за мяч"
               height="294"
             />
-            <h2 class="card-name">Постер New Orlean vs Golden Star</h2>
-            <p class="card-info">Дизайн</p>
+            <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+            <p class="card-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -84,13 +84,13 @@
               alt="Логотип ресторана Seafood"
               height="294"
             />
-            <h2 class="card-name">Ресторан Seafood</h2>
-            <p class="card-info">Приложение</p>
+            <h2 class="card-title">Ресторан Seafood</h2>
+            <p class="card-text">Приложение</p>
           </li>
           <li>
             <img src="./images/project-prime.jpg" alt="Наушники" height="294" />
-            <h2 class="card-name">Проект Prime</h2>
-            <p class="card-info">Маркетинг</p>
+            <h2 class="card-title">Проект Prime</h2>
+            <p class="card-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -98,8 +98,8 @@
               alt="Две коробки на белом фоне"
               height="294"
             />
-            <h2 class="card-name">Проект Boxes</h2>
-            <p class="card-info">Приложение</p>
+            <h2 class="card-title">Проект Boxes</h2>
+            <p class="card-text">Приложение</p>
           </li>
           <li>
             <img
@@ -107,8 +107,8 @@
               alt="Монитор с открытым сайтом Inspiration has no Borders"
               height="294"
             />
-            <h2 class="card-name">Inspiration has no Borders</h2>
-            <p class="card-info">Веб-сайт</p>
+            <h2 class="card-title">Inspiration has no Borders</h2>
+            <p class="card-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -116,8 +116,8 @@
               alt="Открытый журнал"
               height="294"
             />
-            <h2 class="card-name">Издание Limited Edition</h2>
-            <p class="card-info">Дизайн</p>
+            <h2 class="card-title">Издание Limited Edition</h2>
+            <p class="card-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -125,8 +125,8 @@
               alt="Этикетка с логотипом LAB"
               height="294"
             />
-            <h2 class="card-name">Проект LAB</h2>
-            <p class="card-info">Маркетинг</p>
+            <h2 class="card-title">Проект LAB</h2>
+            <p class="card-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -134,8 +134,8 @@
               alt="Ноутбук с открытым сайтом компании Growing Business"
               height="294"
             />
-            <h2 class="card-name">Growing Business</h2>
-            <p class="card-info">Приложение</p>
+            <h2 class="card-title">Growing Business</h2>
+            <p class="card-text">Приложение</p>
           </li>
         </ul>
       </section>
